logs/mobility/build.make.029.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:13:36: error: no ‘void DropOffController::setupPrint()’ member function declared in class ‘DropOffController’
 void DropOffController::setupPrint()
                                    ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:31: error: variable or field ‘print’ declared void
 void DropOffController::print(string str)
                               ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:31: error: ‘string’ was not declared in this scope
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:31: note: suggested alternative:
In file included from /usr/include/c++/4.8/string:39:0,
                 from /opt/ros/indigo/include/geometry_msgs/Pose2D.h:9,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.h:5,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:
/usr/include/c++/4.8/bits/stringfwd.h:62:33: note:   ‘std::string’
   typedef basic_string<char>    string;   
                                 ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In constructor ‘DropOffController::DropOffController()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:62:16: error: ‘setupPrint’ was not declared in this scope
     setupPrint();
                ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In member function ‘void DropOffController::calculateDecision()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:73:21: error: ‘print’ was not declared in this scope
 print("hey it works");
                     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:73:21: note: suggested alternatives:
In file included from /opt/ros/indigo/include/ros/ros.h:40:0,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:8:
/opt/ros/indigo/include/ros/console.h:156:22: note:   ‘ros::console::print’
 ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
                      ^
In file included from /opt/ros/indigo/include/ros/console.h:35:0,
                 from /opt/ros/indigo/include/ros/ros.h:40,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:8:
/opt/ros/indigo/include/ros/console_backend.h:60:6: note:   ‘ros::console::backend::print’
 void print(void* logger_handle, ::ros::console::Level level, const char* str, const char* file, const char* function, int line);
      ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
